--- a/project/indianfoodcss.css
+++ b/project/indianfoodcss.css
@@ -1,6 +1,7 @@
 body{
-	background-color:red;
+	background-color:brown;
 	height:1200px;
+	
 }
 #myVideo {
     position: fixed;
@@ -9,11 +10,11 @@ body{
     min-width: 100%; 
     min-height: 100%;
 }
-.sidebar{
-	position: fixed;
-    top:0;
-    background: rgba(0, 0, 0, 0.5);
-   width:100%;
+.navbar{
+	display:block;
+	position:absolute;
+    background:#bf4040 ;
+    width:93.5%;
     padding: 40px;
 }
 nav{
@@ -77,12 +78,12 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
 }
 
 #g{
-		margin:10px;
+	margin:10px;
 	padding:10px;
 }
 
 #h{
-		margin:10px;
+    margin:10px;
 	padding:10px;
 }
 
@@ -91,23 +92,48 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
     width:80px;	
 }
 .content{position:absolute;
-    top:100px;
-   width:100%;
-    padding: 40px;}
-.h1{
-	text-align:center;
+    top:200px;
+	color:white;
+	}
+h1#h1{
+ text-align:center;
 }
 .p1{
 	text-align:center;
 	font-size:1.5em;
 }
 .alpha{
-	height:300px;
+	position:absolute;
+	height:500px;
+	width:300px;
+	margin-top:600px;
     width:80%;
+	margin-left:10%;
 }
-#shahi{
-	right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+div img#shahi{
+	position:absolute;
+	height:500px;
+	width:100%;
+}
+h1#daily{
+	text-align:center;
+	font-style:bold;
+	color:white;
+	font-size:2em;
+	position:absolute;
+	margin-top:450px;
+}
+.cobra{
+	bottom:0;
+	right:0;
+	position:fixed;
+	background-color:#bf4040;
+	width:100%;
+    padding:1px;
+}
+#imgfb{
+	height:30px;
+	width:30px;
+	float:right;
+	padding:20px;
 }
