--- a/final_food_project/css/login_css.css
+++ b/final_food_project/css/login_css.css
@@ -81,7 +81,7 @@ background: url('data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBw0H
 	float: Left;
     display: block;
     color: green;
-    text-align: center;
+    text-align: right;
 	font-size:35px;
     font-family: Forte; 
     
@@ -129,6 +129,26 @@ background: url('data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBw0H
 	
 }
 
+.footer-div1{
+	background-color:black;
+	float:center;
+	height:60px;
+	width:50%;
+	display: inline-block;
+	padding-left:5%;
+	margin-right:5%;
+}	
+.social{
+	
+}
+.social img{
+	height:40px;
+	width:40px;
+	padding:3px;
+}
+.social img:hover{
+	border: 1px solid red;
+}
 
 .content {
     
@@ -144,7 +164,7 @@ background: url('data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBw0H
 	text-align:center;
 }
 
-.table
+.form
 {
 	width:100%;
 	height: auto;
