--- a/project/cfhpcss2.css
+++ b/project/cfhpcss2.css
@@ -133,7 +133,7 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
 #imgmn{
 	height:250px;
 	width:350px;
-	float:left;
+	float:right;
 }
 #imgmn2{
 	height:250px;
@@ -142,7 +142,7 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
 }
 <!-- menu bars -->
 #hm1{
-	text-align:center;
+	margin-left:50%;
 	font-size:1.5em;
 	font-style:bold;
 	color:#cc5200;
@@ -152,7 +152,7 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
 	text-align:center;
 	font-style:bold;
 	color:#cc5200;
-	font-size:1.5em;
+	font-size:1.2em;
 	float:left;
 	margin-left:60px;
 }
@@ -169,7 +169,7 @@ text-shadow:2px 2px 3px black, 0 0 25px lightblue,  0 0 5px darkblue;
 	color:#cc5200;
 	font-size:1.5em;
 	float:left;
-	margin-left:60px;
+	margin-left:100px;
 }
 #hm3{
 	text-align:center;
